# airbot-vision-grasping

./: .gitignore  README.md  fix_open_loop_bridge_task.patch  fix_task_serialization.patch
Orbbec_ws/: README.md
Orbbec_ws/src/detector/: CMakeLists.txt  package.xml
Orbbec_ws/src/detector/src/: apple_detector_node.cpp  box_detector_node.cpp  duck_detector_node.cpp
hand_to_eye/: README.md  auto_pick_from_base.py  camera_to_base_transform.py  collect_handeye_data.py  end_position_publisher.py  move_to_lower_home.py  solve_handeye.py  validate_handeye.py  visual_target_bridge.py
hand_to_eye/data/: poses.csv  poses_backup_before_drop15.csv
robot_ws/: README.md
robot_ws/src/robot_arm_driver/: package.xml  setup.py
robot_ws/src/robot_arm_driver/robot_arm_driver/: arm_executor_node.py  cart_move_node.py  end_position_publisher.py  gripper_node.py  init_arm.py  move_node.py  sleep_arm.py  state_node.py
robot_ws/src/robot_arm_driver/robot_arm_driver/executor/: __init__.py  command_model.py  reset_manager.py  (+1 more)
robot_ws/src/robot_arm_interface/: package.xml  setup.cfg  setup.py
robot_ws/src/robot_arm_interface/robot_arm_interface/: airbot_wrapper.py  test_wrapper.py
robot_ws/src/robot_bringup/: package.xml  setup.py
robot_ws/src/robot_bringup/config/: arm_executor.yaml  open_loop_grasp.yaml  visual_servo_grasp.yaml
robot_ws/src/robot_bringup/launch/: arm_bringup.launch.py  camera_target_demo.launch.py  open_loop_grasp.launch.py  visual_servo_grasp.launch.py
robot_ws/src/robot_msgs/: CMakeLists.txt  package.xml
robot_ws/src/robot_msgs/msg/: ArmJointState.msg  CameraTarget.msg  GripperCommand.msg  VisualTarget.msg
robot_ws/src/robot_tasks/: package.xml  setup.cfg  setup.py
robot_ws/src/robot_tasks/robot_tasks/: camera_target_executor.py  grasp_task_open_loop.py  grasp_task_visual_servo.py  visual_target_bridge.py
(+15 files in other folders)
