<?xml version="1.0"?>
<package format="3">
  <name>detector</name>
  <version>0.0.0</version>
  <description>Red apple detector using Orbbec ROS2 image topics</description>

  <maintainer email="xjt@example.com">xjt</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
